@@ -1,5 +1,13 @@
 2013-09-13  Joerg Wunsch <j.gnu@uriah.heep.sax.de>
 
+	bug #35456 The progress bar for STK500V2 programmer is "wrong".
+	* avr.c (avr_read, avr_write): Change the progress reporting for
+	paged read/write from per-address to per-considered-page.  This
+	ought to give a realistic estimation about the time still to be
+	spent.
+
+2013-09-13  Joerg Wunsch <j.gnu@uriah.heep.sax.de>
+
 	bug #34277: avrdude reads wrong byte order if using avr911 (aka butterfly)
 	* butterfly.c (butterfly_read_byte_flash): Swap bytes received.
 
